--- a/style/style.css
+++ b/style/style.css
@@ -229,6 +229,7 @@
     text-transform: capitalize;
     color: var(--black-font-color);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
 }
     .button-image {
         width: 51px;
